--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>IoT HTTPS Relay (for Firebase)</title>
+    <title>IoT HTTPS Relay</title>
 
     <!-- Bootstrap -->
     <link href="bootstrap-3.3.4-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -28,15 +28,16 @@
         </div>
 
         <p><a href="https://github.com/AllAboutEE/iot-https-relay">Fork me on GitHub</a></p>
-        
+
         <h2>Supported APIs:</h2>
         <ul class="list-group">
           <li class="list-group-item"><a href="twilio.html">Twilio (SMS and Voice Calls)</a></li>
+          <li class="list-group-item"><a href="https://firebase.google.com/docs/reference/rest/database/">Firebase REST API</a></li>
         </ul>
         <p>
-            Submit API requests as issues with an "enhancement" label to  
+            Submit API requests as issues with an "enhancement" label to
             <a href="https://github.com/AllAboutEE/iot-https-relay">GitHub IoT HTTPS Relay</a>
         </p>
-
+    </div>
   </body>
 </html>
